--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -28,7 +28,7 @@
 %\usepackage{xr}
 \externaldocument{supple}
 
-\title{Early spring leads to longer but cooler growing seasons for woody species} % Phenological differences among species explain why early leafout extends the calendar but not thermal growing season
+\title{Early leafout leads to cooler growing seasons in woody species} % Phenological differences among species explain why early leafout extends the calendar but not thermal growing season
 %dl2024Sept20: I like the idea here, but struggle with the wording---"extends the calendar"--- it might be confusing to a reader unfamiliar with the concept
 
 \author{D.M. Buonaiuto $^{1,2,3}$, C.J. Chamberlain $^{2,3,4}$,
@@ -68,7 +68,7 @@ $^a$Corresponding author: 301.405.1061; dbuona@umd.edu\\
         % Main text (excluding refs, abstract and figure captions) 1000-1500 words currenty at 1985 (prboably less cause that number includes the footnotes)
         %we're good on title
         %supposed to have only 2 figures, we have 3. It says the editor's discression allows more.
-        %way over with refs currently at 46, and the guideline is 20
+        %way over with refs currently at 42, and the guideline is 20
         % we need to make our methods ``online methods"
         %we can still have a supplement
 
@@ -76,8 +76,8 @@ $^a$Corresponding author: 301.405.1061; dbuona@umd.edu\\
 % Dan: Fig 3b -- it would be great to estimate in the figure (and just show it) the GDD accumulated in the earliest 24 days of the dark line (draw a box around and write: GDD gained in 24 days earlier than conspecific: XX)  and do the same for the end of the later individual. Also I would write: Thermal season (GDD) for the Y axis and work to keep terms consistent across figures. 
 % Most comments say: emw8Oct2025: 
 
-\section{Abstract}
-It is currently unclear if longer growing seasons due to climate change increase carbon storage, because plants may adjust their growth period based on their carbon-sink capacity.  Using rarely available plant-scale phenological measurements from a common garden experiment, we found a correlation between earlier leafout and budset, which resulted in shorter thermal growing seasons---when leafout was early---a relationship that was strongest in early-leafing species.
+% emw6Nov2025 -- I think we should be careful on going too hard on carbon, especially in the abstract.
+\abstract{Recent results have challenged the assumption that longer growing seasons increase plant growth, but struggled to explain why. Using rarely available plant-scale phenological measurements from a common garden  of 18 woody species, we found earlier leafout led to earlier budset and thus lower thermal growing seasons, especially for early-leafing species. These results challenge our fundamental understanding of budset and may help explain why apparently longer seasons do not increase growth.}
 
 
 % emwJuly22: I can make more edits to abstract when we have a journal in mind and thus a length
@@ -93,19 +93,25 @@ It is currently unclear if longer growing seasons due to climate change increase
 % This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable. 
 
 %\section{Introduction}
-Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions annually  \citep{shanley2024, roe2021}. Most models of climate change assume sequestration may increase as warming drives longer seasons, more tree growth and, thus, more carbon storage, following decades of evidence from ecosystem-scale studies \citep{Churkina2005,White1999,Keenan2014}. However,recent findings that earlier leafout and warmer seasons do not increase productivity or tree growth \citep{Zani2020,Norby2021,dow2022warm,Zohner2023}, have called this assumption into question. 
-% Observational studies of individual adult trees have failed to find a connection between tree growth and warming \citep{camarero2022decoupled,dow2022warm,silvestro2023longer} ...  
+Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage, following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
+However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity, though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023},
+% CUTREFS: You only need one of {shanley2024, roe2021} and 1-2 of {Churkina2005,White1999,Keenan2014} ... I cut some. 
+% CUTREFS: camarero2022decoupled
 
-These results suggest fundamental gaps in our understanding of how early-season events and the environmental conditions of the vegetative period shape end-of-season events. This discrepancy could be related to differences in the scale of observation, which affects how the start and end of the season are measured \citep[][]{Korner2023,grephon2025}. Often findings of a correlation between season length and growth have utilized ecosystem-scale estimates of productivity \citep{chen1999effects,Keenan2014,norby2021comment} and the start and end of season that blur across species and individuals. In contrast, recent findings of a disconnect have come often from observations of individual trees on one or a few species \citep{camarero2022decoupled,dow2022warm,silvestro2023longer} and experiments on juvenile trees of one to species \citep{Zani2020,Norby2021,Zohner2023}. These experiments have suggested that plants adjust their end of season timing dynamically such that longer seasons do not increase total productivity, but the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}. 
-
-The timing of leafout and senescence are critical to plant growth strategies \citep{Grime:1977sw} and thus likely vary across species. Within species, populations may also vary \citep{aitken2016}, especially because end-of-season events are usually more locally adapted than start-of-season events %---with populations using unique photoperiods to cue growth cessation depending on the local climate 
-\citep[e.g. budset][]{bauerle2012photoperiodic,soolanayakanahally2013timing}. Increasing evidence also suggests local climate may define narrow periods of growth, with most significant growth earlier in the growing season \cite{zweifel2021trees,Zohner2023}. These results suggests the calendar growing season (i.e., the number of days between the start and end of the growing season) may be less informative to predicting growth than estimates that directly incorporate environmental conditions \citep{Korner2023}.
+These results suggest fundamental gaps in our understanding of how early-season events and the environment of the growing season shape end-of-season events, but addressing these gaps requires working across plant strategies and varying definitions of a growing season. Because the timing of leafout and senescence are critical to plant growth strategies they vary strongly across species \citep{Grime:1977sw}. Within species, populations also vary \citep{aitken2016}, especially because end-of-season events are usually locally adapted %---with populations using unique photoperiods to cue growth cessation depending on the local climate 
+\citep[e.g. budset][]{bauerle2012photoperiodic,soolanayakanahally2013timing}. Increasing evidence also suggests local climate may define narrow periods of growth for many species, with most significant growth earlier in the growing season \cite{zweifel2021trees,Zohner2023}. These results suggest the calendar growing season (i.e., the number of days between the start and end of the growing season) may be less informative to predicting growth than estimates that directly incorporate environmental conditions \citep{Korner2023}.
 % While small scale pot experiments are better for capturing these plant-level measurements, results to date generally cannot differentiate between different species.
 % Some studies have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but several recent studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}.
 
-The thermal growing season---a period of favorable meteorological conditions for plant growth \citep{Korner2023}---offers an alternative to the calendar growing season. It is also widely used, most commonly in the metric of growing degree days, a temperature derived measure of time that accumulates when temperatures are above a certain minimal threshold \citep{CHUINE2000337,Moore:2014wl,YANG199561}. Because plant photosynthetic rates increase with temperature \citep{Farquhar:1980vm} the thermal growing season is mechanistically related to primary productivity, and thus may be a better proxy than calendar time for relating growing season length to carbon gain. Importantly, depending on the interannual temperature variation, years with substantially different calendar growing seasons can have very similar thermal growing seasons, or \emph{vice versa}, but we generally lack plant-level phenological data for the start and end of season to examine how the calendar and thermal seasons of species and populations compare across years. % Recent work has suggested early, increased productivity in the calendar growing season drives early senescence \citep{Zani2020}, and proposed that plants adjust their phenological trajectory mid-season based on a combination of growing season temperature and daylength \citep{Zohner2023}, thus maintaining a consistent thermal growing season. 
+% emw6Nov2025 -- anywhere you cite 2 or more papers for one point, try to cut down to one
+The thermal growing season---a period of favorable meteorological conditions for plant growth \citep{Korner2023}---offers an alternative to the calendar growing season. It is also widely used, most commonly in the metric of growing degree days, a temperature derived measure of time that accumulates when temperatures are above a certain minimal threshold \citep{CHUINE2000337,Moore:2014wl,YANG199561}. Because plant photosynthetic rates increase with temperature \citep{Farquhar:1980vm} the thermal growing season is mechanistically related to primary productivity, and thus may be a better proxy than calendar time for relating growing season length to carbon gain. Yet we generally lack plant-level phenological data for the start and end of season to examine how the calendar and thermal seasons of species and populations compare across years. 
 
-Here, we use rarely available plant-scale data---phenological observations over three years from a multi-species common garden study---to test correlations between leafout and budset in different species from four populations across a 4.5$\degree$ latitudinal gradient. We examine how start-of-season events (i.e., leafout) may affect end-of-season events (i.e., budset) to determine the length of both the calendar and thermal growing seasons. Our results leverage observations of leafout and growth cessation at the individual tree-level to understand how these processes scale to populations, species and communities and may thus improve our understanding of ecosystem-scale measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
+% Importantly, depending on the interannual temperature variation, years with substantially different calendar growing seasons can have very similar thermal growing seasons, or \emph{vice versa}, but we generally lack plant-level phenological data for the start and end of season to examine how the calendar and thermal seasons of species and populations compare across years. 
+% Recent work has suggested early, increased productivity in the calendar growing season drives early senescence \citep{Zani2020}, and proposed that plants adjust their phenological trajectory mid-season based on a combination of growing season temperature and daylength \citep{Zohner2023}, thus maintaining a consistent thermal growing season. 
+
+
+% emw6Nov2025 -- we do not report correlations, we use a regression so we need to avoid talking about correlations, unless we want to annoy reviewers.
+Here, we use rarely available plant-scale data from three years of a multi-species, multi-population common garden to test how variation in start and end of season events drive shifts in calendar and thermal growing seasons. Our results leverage phenological observations of leafout and growth cessation (budset) at the individual tree-level to understand how growing seasons scale across populations, species and communities, and may thus improve our understanding of ecosystem measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
 
 \section{Results \& Discussion} 
 \iffalse
@@ -117,22 +123,33 @@ Here, we use rarely available plant-scale data---phenological observations over 
 % emw8Oct2025: END of stuff I changed/comments
 \fi
 
-% TodoOct2025: Sneak in methods ... across 18 species and four populations? Then delete from methods?
-Across three years and 18 co-occuring species from four populations, our common garden captured high variation in the timing of both start and end of season events  (Figure \ref{fig:vapar}). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.10x and 1.84x respectively), with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:thermcal}a,b), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. However, longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed. 
+% emw6Nov2025 -- we don't have inference at 2 decimal places, can you change throughout to 1 decimal place?
+Across three years and 18 co-occuring species from from four populations across a 4.5$\degree$, our common garden captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Fig: \ref{fig:thermcal}a,b), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
 
-Instead%, we found an apparently fundamental---and unexpected---trade-off where 
-early calendar growing seasons led to lower thermal growing seasons (Figure \ref{fig:thermcal}c,d, this and other results were similar when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:concept}a,b). 
+% emw6Nov2025 -- Can you add a fig ref for 'This result was driven by an apparent relationship between leafout and budset at the individual level (FIG)'?
+Longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed; instead
+early calendar growing seasons led to lower (cooler) thermal growing seasons (Figure \ref{fig:thermcal}c,d, this and other results were similar when we determined the length the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This result was driven by an apparent relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:concept}a,b). 
 
-The differences between thermal and calendar growing seasons was strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for later species an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ days for leafout: $:8.12 $UI_{90}$[5.54,11.56], days for budset: 9.73 $UI_{90}$[6.99,13.57], days for season length: 14.45, $UI_{90}$[10.34,19.9l Figure \ref{fig:vapar}a-b).
+% emw6Nov2025 -- I cut the below point because I think it is best explained in the figure (and would take more words here to explain)
+% ', and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums'
+Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:thermcal}-\ref{fig:concept}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, likely because their earlier leafout still occurred in thermally favorable times of the season. Species was also the a major predictor of variation in leafout, budset and growing season length ($\sigma_{species}$ days for leafout: $:8.22 $UI_{90}$[5.62,11.7], days for budset: 9.84 $UI_{90}$[7.01,13.52], days for season length: 14.54, $UI_{90}$[10.43,19.74l Figure \ref{fig:vapar}a-b).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
-These results suggest that some of the current apparently conflicting findings of whether longer seasons increase tree growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to hasten their end of season events with earlier start of season events supports other studies finding a similar correlation \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}, but found this varied by species. Thus, we may expect that studies of individual trees---and for certain species---could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were strongly species-dependent, previous findings may depend strongly on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species given the correlations we found between start and end of season events. Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
+These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to hasten their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[though using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees---and for certain species---could find little relationship between earlier leafout and growth \citep{cuny2012life michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were strongly species-dependent, previous findings may depend on the species studied, consistent with other work comparing across smaller sets of species  \citep{cuny2012life,michelot2012comparing}. This variation also likely scales up to affect ecosystem-level estimates which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
 
-Beyond species-level variation, our results also found high variation across years in both leafout and budset. Differences across years in leafout were high ($\sigma_{year}$:10.65 days $UI_{90}$[4.88,20.86], Figure \ref{fig:vapar}) and expected, as leafout is highly plastic, varying with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found almost no variation across populations in leafout ($\sigma_{population}$:0.57, $UI_{95}$[0.04,1.77], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:15.02 days $UI_{90}$[6.44,30.84], Figure \ref{fig:vapar}), given budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016,vico2021}. We did find evidence of local adaptation ($\sigma_{population}$:2.34 days, $UI_{90}$[0.4,6.13], Figure \ref{fig:vapar}). Populations from the Second College Grant (the site with the fewest frost free days; Figure \ref{fig:ffd}) set buds approximately two days before those from the White Mountains (the site with the next fewest frost free days). These differences, however, were weak (Figure \ref{fig:vapar}b) and 6X and \Sexp{spVpop}X smaller than the variation due to year and species (respectively). 
+% emw6Nov2025 -- avoid 'plastic' here as some would not use the word the way we do ... 
+% emw6Nov2025 -- save words by not naming the sites
+Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$:10.62 days $UI_{90}$[4.83,21.22], Figure \ref{fig:vapar}), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$:0.61, $UI_{95}$[0.03,1.86], Figure \ref{fig:vapar}b). Yet the finding of strong variation across years in budset was surprising (\sigma_{year}$:15.13 days $UI_{90}$[6.24,31.02], Figure \ref{fig:vapar}) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. We did find evidence of local adaptation ($\sigma_{population}$:2.35 days, $UI_{90}$[0.38,6.39], Figure \ref{fig:vapar}), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}b) and 6X and \Sexp{spVpop}X smaller than the variation due to year and species (respectively). 
 
+% emw6Nov2025 -- CUTREFS: Olsen2014, vico2021
+The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues  appears an important next step. Testing these relationships for other end of season events could also help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}, and with different implications for carbon gain \citep{Korner2023}.
+
+% Shortened for space
+\iffalse
 The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, but will require a new approaches to how we view and study budset and other end of season events. Most work on budset in broadleaf species comes from one genus (\emph{Populus spp.}) and has stressed the major control of photoperiod limiting responses to anthropogenic warming. Yet some studies have found evidence of temperature \citep{Olsen2014,Rohde2011,Michelson2018}, contrasting with this prediction. Teasing apart effects of temperature from intrinsic correlations between start and end of season events appears an important next step. Doing so across additional species may be especially helpful, as a focus on single species may not always predict broad scale trends \citep{Morales-Castilla2024}, and our results suggest important variation across species. 
 
 Budset represents the stop of primary growth and generally correlates strongly with the stop of radial growth \citep{soolanayakanahally2013timing}, but it is only one of many ways that plants begin to transition from growth to dormancy each year---generally at different times for different events \citep{Michelson2018}. While the need to better understand which metrics of end of season events correlate best with growth and carbon gain has been often discussed \citep{GALLINAT2015,Korner2023}, our results suggest we also need to study how these events shift with earlier and warmer years. Studies of leaf longevity have begun to examine this, but more work across different metrics of end of season and across many more species is critical.
+\fi
 
 % This relationship, however, was strongly species-dependent. Later leafout in calendar time led to longer thermal seasons in species that typically leaf out earlier in the spring relative to others. This included shrubs such as \emph{Sambucus racemosa}, \emph{Viburnum cassiodes}, \emph{Spirea alba}, \emph{Diervella lonicera}, \emph{Aronia melanocarpa} \emph{Spirea tomentosa} and the tree species \emph{Betula populifolia}. Later-leafout species showed a weaker relationship (\emph{Betula papyrifera}, \emph{Betula allegheniensis} and \emph{Alnus incana}, Figure \ref{fig:thermcal}d). 
 %cjc2024Sept25: I feel curious about upper temperature thresholds and what may be considered "too hot" for some species' productivity. Based on anecdotal evidence from Tree Spotters and these common garden observations, I remember some individuals dropping leaves in late summer before bud set because of drought-like conditions. I don't know if we can always assume that higher temperatures necessarily correlate to higher productivity - I'm thinking about assimilation curves and how they hit a peak at certain temperatures but begin to drop again with higher temps. DB Sept 17: I have no doubt this will come up in review.
@@ -146,14 +163,20 @@ Budset represents the stop of primary growth and generally correlates strongly w
 %
 %  Our results suggest that earlier leafout may have little effect on the thermal growing season because of unfavorably low temperatures combined with the observed correlation between leafout and budset (Figure \ref{fig:vapar}).% ADDcites? from noeviany in whathappened.R in grephon repo
 
-Our multi-species common garden study showed that for early-leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth, yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,camarero2022decoupled,dow2022warm,silvestro2023longer}. Our results show that there may be little advantage from a carbon or primary productive perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
-%cjc2024Sept25: I love this above paragraph!! It's a thoughtful hypothesis that could explain so much. 
+Our multi-species common garden study showed that for early-leafing species, earlier leafout does not extend their thermal growing season---a proxy for potential carbon uptake period---despite extending the calendar growing season.  Given that photosynthesis is limited by cold temperatures in early spring, earlier leafout appears to provide limited opportunity for substantial growth, yet may deprive plants of fully using late-season warmth. This may explain why multiple studies have failed to find correlations between longer seasons and increased plant growth \citep{cufar2015variations,dow2022warm,silvestro2023longer}. Our results suggest little advantage from a carbon or primary productivity perspective for leafing out too early in the season, as thermal conditions are not favorable for photosynthesis and assimilation. % Cut for space:  Many of the species that are most phenologically sensitive to climate change are already among the earliest species to leaf out in temperate plant communities \citep{Shen2014,Geng2020}, implying there may be little to gain from a carbon perspective.
+Varying light availability over the early season combined with different plant strategies may alter this equation, and explain why some species leafout early during these thermally unfavorable conditions. Supporting this, we found understory species often showed the strongest relationship, suggesting that leafing out in thermally poor conditions before the upper canopy closes and reduces light may be a successful strategy. 
 
-This trade-off between earlier leafout and the thermal season was driven by variation across years at the individual and species levels---scales that are not always studied closely in phenology research, where many long-term records from natural systems were not collected on specific individuals and satellite observations integrate over species in an ecosystem \citep{Menzel1999,Pettorelli:2005ns,phenophylo}. %  While experiments almost always track individuals, they often last only one year and are conducted often on one species, making it difficult to scale them up. While new data is continually changing this reality, we need better data to link mechanistically from the plant to community and ecosystem ...
+% Shortened for space
+\iffalse
+
+%  While experiments almost always track individuals, they often last only one year and are conducted often on one species, making it difficult to scale them up. While new data is continually changing this reality, we need better data to link mechanistically from the plant to community and ecosystem ...
 Our results raise questions about why some species leafout early during these unfavorable conditions, and why species tracking spring warming due to climate change have increased performance relative to non-trackers \citep{Cleland2012}. In our study we only evaluated the thermal conditions that may affect photosynthesis, rather than photosynthesis itself, which also depends strongly on light availability. In forest systems, light availability is strongly dependent on canopy conditions. In our study, the species that leafed out the earliest are understory shrubs, for whom access to light becomes severely limited later in the growing season as canopy trees leaf out. It may be that for these species, the light availability early in the season necessitates leafing out in sub-optimal thermal conditions \citep{AUGSPURGER2005}.
+\fi
 
-Our findings suggest that linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). Progress will require more efforts to understand and model species-level shifts in phenology. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. Sampling across species of different leafout and growth strategies appears especially important as we found later-leafout species did not exhibit a strong trade-off. Whether this is consistent across other communities of species---and %some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and 
-other climates is an important question. Understanding whether the thermal responses are consistent across species with different leafout and growth strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes. 
+The link between earlier leafout and lower thermal seasons was driven by variation across years at the individual and species levels---scales that are not always studied closely in phenology research  \citep{Menzel1999}. While satellite observations can document intriguing trends \citep[e.g.,][]{Zohner2023}, observations that include far more species at a finer scale are likely critical for mechanistic understanding. Sampling across species of different leafout and growth strategies appears especially important as we found later-leafout species did not exhibit a strong trade-off. Whether this is consistent across other communities of species---and %some of the latest leafout species, which are often difficult to grow in common gardens (given their slow growth)---and 
+other climates is an important question. Understanding whether the thermal responses are consistent across species with different strategies could also inform how the thermal season varies over time and space, improving our ability to accurately model biological carbon fluxes.
+
+% Our findings suggest that linking phenological growing season to primary productivity requires accounting for phenological variation at multiple scales (individual, species level, multiple phases). Progress will require more efforts to understand and model species-level shifts in phenology.  
 
 % emwOct2025: This feel repetitive with above... 
 % This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable. For later leafing species, earlier leafout did not substantially reduce their thermal growing season. This is likely because for them, an earlier leafout still occurred in thermally favorable times of the season, and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums.
@@ -176,7 +199,7 @@ Thanks to Kea Woodruff and Lee Toomey for the help planting and caring for the W
 \begin{figure}[h!]
     \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/primarygrowingseason_modplots.jpeg} 
-    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length differs between the calendar growing season and the thermal growing season. Later leafout resulted in a shorter calendar growing season (median estimated effect: -0.45 days, $UI_{90}[-0.68,-0.21]$) (a) and this pattern was consistent across species in our study (b). In contrast, an increasing later leafout resulted in a longer thermal growing season (median estimates effect: 5.3 growing-degree days, $UI_{90}[2.12,8.44]$) (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in a), and c) represent the raw data (per individual tree per year).}
+    \caption{The relationship between Start of Spring (calendar day of leafout) and growing season length differs between the calendar growing season and the thermal growing season. Later leafout resulted in a shorter calendar growing season (median estimated effect: -0.44 days, $UI_{90}[-0.68,-0.21]$) (a) and this pattern was consistent across species in our study (b). In contrast, an increasing later leafout resulted in a longer thermal growing season (median estimates effect: 5.39 growing-degree days, $UI_{90}[2.15,8.52]$) (c) though this effect was stronger for species that typically leafout earlier in the season---panels in c) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in a), and c) represent the raw data (per individual tree per year).}
     \label{fig:thermcal}
 \end{figure}
 
